Agregada función eliminar peer, modificado BuildConfig.
feat: Agregar función eliminar peer
refactor: Cambiar nombre de BuildConfig -> ConfiguracionUtils -> clase de utilidad para los comandos de configuración.
refactor: Mover la funcíon isActiveAgent hacia la clase ConfiguracionUtils con el nombre isNotActiveAgent